# Pyhon-tutorials

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
JMES_path/: filters_multiselect.py  filters_multiselect_hash.py  nested_data.py
TDD_driven/: Pipfile  README.md
atexit_tutorial/: atexit_1.py
blog/: database.db  models.py  queries.py
blog_app/: README.md
celery/: README.md  compose.yaml
context_manager_exitstack/: ctx_exitstack.py
context_managers/: context_managers.py
decorators/: gahjelle_pycon_2021.py  realpython39.py
docker_pypy/: Dockerfile  compose.yaml
iterator_out_of_a_function/: Readme.md  main.py
lettere_a_numeri/: config.yaml  connection_test.py  helper_functions.py  main.py
match_case/: README.md  adding_a_wildcard.py  case_match.py  matching_builtin_classes.py
metaprogramming/: meta_programming.py
my_asyncer/: async_code_from_sync_code.py  asyncer_test_runnify.py  pyproject.toml  soonify.py  soonify_not_concurrent.py  soonify_return_value.py  sync_code_from_async_code.py
ned_batchelder_tweeter/: auto_math.py  my_math.py
operators/: attr_getter.py  count_of.py  index_of.py  item_getter.py  item_getter2.py  method_caller.py
plugin_architecture/: example.py
profiling/: Readme.md  default_profiling.py
python_3_11/: README.md
python_configure_gc/: README  compose.yaml
remote_debug_python_k8s/: README.md  config.yaml  create-debug-container.sh  debugger.Dockerfile  deployment.yaml
single_dispatch/: dispatch_single.py  singledispatch_classes.py  singledispatch_method.py
timers/: latest_tutorial.prof  (+2 more)
(+163 files in other folders)
